--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#4169e1">
     <title>Geet Duggal</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style.css?v=1.2">
     <link rel="stylesheet" href="style-ambient-synth.css?v=1.1">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
@@ -18,17 +18,17 @@
 <h1>Geet Duggal</h1>
 <p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href="https://gist.github.com/geetduggal/e0a92aeb7162cc5c4abbef26233c71e5">settings.json</a> · </a><a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
 <table>
-<tr><td nowrap width=50px>2025-02-17</td><td><div id='typing' class='typing-animation'></div></td></tr>
-<tr><td nowrap width=50px>2025-01-27</td><td>Seventh installment of Tech Habits out!</td></tr>
-<tr><td nowrap width=50px>2025-01-24</td><td>The third and final BuJo post live! I call it 'Atlas Journaling'</td></tr>
-<tr><td nowrap width=50px>2025-01-07</td><td>Sixth installment of Tech Habits out!  Another quick one.</td></tr>
-<tr><td nowrap width=50px>2024-12-16</td><td>Good use of short term and working memory: memorize your schedule for the day!</td></tr>
-<tr><td nowrap width=50px>2024-12-02</td><td>Fifth installment of Tech Habits out!  Quick one.</td></tr>
-<tr><td nowrap width=50px>2024-12-02</td><td>Yes to <a href='https://support.apple.com/guide/mac-help/mac-window-tiling-icons-keyboard-shortcuts-mchl9674d0b0/mac'>native window tiling</a>.</td></tr>
+<tr><td nowrap width=50px>2025-05-05</td><td><div id='typing' class='typing-animation'></div></td></tr>
+<tr><td nowrap width=50px>2025-04-25</td><td>💿 Raycast and Warp are two apps I am very happy with today!</td></tr>
+<tr><td nowrap width=50px>2025-04-15</td><td>💿 <a href='https://github.com/openai/codex'>Codex</a></td></tr>
+<tr><td nowrap width=50px>2025-04-04</td><td>💿 Awesome: https://voxel51.com/blog/how-to-cluster-images/</td></tr>
+<tr><td nowrap width=50px>2025-02-26</td><td>💬 Slack is down.  Geeting is not.</td></tr>
+<tr><td nowrap width=50px>2025-02-23</td><td>🎧 Apple Vision Pro is low-key amazing. <a href='https://www.youtube.com/watch?v=kJhUOwzhC1A&pp=ygUcc25henp5IGxhYnMgYXBwbGUgdmlzaW9uIHBybw%3D%3D'>This year-later review</a> does a particularly good job explaining.</td></tr>
+<tr><td nowrap width=50px>2025-02-17</td><td>'monospacedness' (pronounced mono-space-ed-ness) should be a word. Eighth installment of Tech Habits out!</td></tr>
 </table>
 
 <script>
-  const text = "monospacedness should be a word. Eighth installment of Tech Habits out!";
+  const text = "Ninth installment of Tech Habits posted!";
   let index = 0;
 
 
@@ -56,82 +56,3 @@ See all Geets with ability to permalink on
 </p>
 
 <h2>Articles</h2><table>
-<tr><td nowrap width=50px>2024-02-17</td><td><a href='https://medium.com/@geetduggal/tech-habits-atlas-journaling-one-big-text-file-and-new-experiments-433ede6c96c0'>Tech Habits: Atlas Journaling, One Big Text File, and New Experiments</a></td></tr>
-<tr><td nowrap width=50px>2024-01-27</td><td><a href='https://medium.com/@geetduggal/27672f999949'>Tech Habits: One Big Text File (OBTF) after 24 Hours</a></td></tr>
-<tr><td nowrap width=50px>2024-01-24</td><td><a href='https://medium.com/@geetduggal/atlas-journaling-a-unified-approach-for-seeing-the-big-picture-and-acting-with-focus-78804f26f5ab'>Atlas Journaling: A Unified Approach for Seeing the Big Picture and Acting with Focus</a></td></tr>
-<tr><td nowrap width=50px>2024-01-07</td><td><a href='https://medium.com/@geetduggal/tech-habits-the-right-time-to-experiment-with-task-and-capture-apps-06c775bc3aa9'>Tech Habits: Tech Habits: The Right Time to Experiment with Task and Capture Apps</a></td></tr>
-<tr><td nowrap width=50px>2024-12-02</td><td><a href='https://medium.com/@geetduggal/tech-habits-project-management-using-a-csv-file-vs-obsidian-kanban-2560f832d33c'>Tech Habits: Project Management Using a CSV File vs. Obsidian Kanban</a></td></tr>
-<tr><td nowrap width=50px>2024-10-14</td><td><a href='https://medium.com/@geetduggal/tech-habits-the-problem-with-task-batching-41f0a7ab9f49'>Tech Habits: The Problem with Task Batching</a></td></tr>
-<tr><td nowrap width=50px>2024-10-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-managing-project-lists-in-plain-text-files-and-obsidian-a51c5e72f5ac'>Tech Habits: Managing Project Lists in Plain Text Files and Obsidian</a></td></tr>
-<tr><td nowrap width=50px>2024-09-22</td><td><a href='https://medium.com/@geetduggal/tech-habits-capture-everything-in-one-place-dd3f20fee466'>Tech Habits: Capture Everything in One Place?</a></td></tr>
-<tr><td nowrap width=50px>2024-09-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-obsidian-live-preview-vi-focus-mode-alarms-for-calendar-events-8c42976be5af'>Tech Habits: Obsidian Live Preview, Vi Focus Mode, & Alarms for Calendar Events</a></td></tr>
-<tr><td nowrap width=50px>2024-08-27</td><td><a href='https://medium.com/@geetduggal/2a90c4357068'>Weather Resistant Productivity</a></td></tr>
-<tr><td nowrap width=50px>2024-07-30</td><td><a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/pke/OAuth.md'>OAuth (An Example PKE Article)</a></td></tr>
-<tr><td nowrap width=50px>2024-07-24</td><td><a href='https://medium.com/@geetduggal/want-extraordinarily-useful-and-timeless-notes-build-a-personal-knowledge-encyclopedia-bc8b7fb09829'>Want Extraordinarily Useful and Timeless Notes? Build a Personal Knowledge Encyclopedia.</a></td></tr>
-<tr><td nowrap width=50px>2024-07-01</td><td><a href='https://medium.com/@geetduggal/a-no-code-ish-approach-for-using-obsidian-ai-to-process-your-notes-the-way-you-want-50714ceaf9c3'>A “No-Code”ish Approach for Using Obsidian & AI To Process Your Notes the Way You Want</a></td></tr>
-<tr><td nowrap width=50px>2024-06-20</td><td><a href='https://medium.com/@geetduggal/discipline-absorbs-chaos-try-this-game-changing-simple-way-to-manage-your-time-14e262ca05bc'>Discipline Absorbs Chaos. Try This Game-Changing & Simple Way to Manage Your Time.</a></td></tr>
-<tr><td nowrap width=50px>2024-05-26</td><td><a href='https://medium.com/@geetduggal/the-most-useful-ios-shortcut-for-obsidian-and-beyond-revisited-9692e62c993a'>The Most Useful iOS Shortcut for Obsidian (and Beyond!) Revisited</a></td></tr>
-<tr><td nowrap width=50px>2024-05-08</td><td><a href='https://medium.com/@geetduggal/your-obsidian-workflow-is-missing-a-physical-notebook-2e99866edcfc'>Your Obsidian Workflow is Missing a Physical Notebook</a></td></tr>
-<tr><td nowrap width=50px>2024-04-22</td><td><a href='https://medium.com/@geetduggal/bullet-journals-and-obsidian-15c52584cd83'>Bullet Journals and Obsidian</a></td></tr>
-<tr><td nowrap width=50px>2024-04-07</td><td><a href='https://medium.com/@geetduggal/it-was-love-at-first-sight-with-this-obsidian-plugin-0616630becf7'>It Was Love At First Sight with This Obsidian Plugin</a></td></tr>
-<tr><td nowrap width=50px>2024-02-26</td><td><a href='https://medium.com/@geetduggal/how-to-create-a-simple-personal-finance-dashboard-in-obsidian-2f238627286a'>How to Create a Simple Personal Finance Dashboard in Obsidian</a></td></tr>
-<tr><td nowrap width=50px>2024-02-17</td><td><a href='https://medium.com/@geetduggal/satisfy-the-beast-science-the-sh-t-out-of-difficult-tasks-and-habits-18c4e3d2f04a'>Satisfy the Beast. Science the Sh-t Out of Difficult Tasks and Habits</a></td></tr>
-<tr><td nowrap width=50px>2024-01-05</td><td><a href='https://medium.com/@geetduggal/the-power-of-obsidian-for-personal-finance-accounting-f00bbcb1b66f'>The Power of Obsidian for Personal Finance Accounting</a></td></tr>
-<tr><td nowrap width=50px>2023-12-16</td><td><a href='https://medium.com/@geetduggal/capture-to-do-d040e1bae4a6'>Capture To Do. How I Manage Literally All My Tasks in Obsidian</a></td></tr>
-<tr><td nowrap width=50px>2023-09-10</td><td><a href='https://medium.com/@geetduggal/powerful-task-creation-with-siri-and-fantastical-57423aa3cf14'>Powerful Task Creation with Siri and Fantastical</a></td></tr>
-<tr><td nowrap width=50px>2022-07-23</td><td><a href='https://medium.com/@geetduggal/the-most-useful-ios-shortcut-for-obsidian-450a4a751ab0'>The Most Useful iOS Shortcut for Obsidian</a></td></tr>
-<tr><td nowrap width=50px>2022-07-13</td><td><a href='https://medium.com/@geetduggal/how-to-use-obsidian-as-your-companion-for-ultimate-creativity-65dabed92768'>How To Use Obsidian as Your Companion for Ultimate Creativity</a></td></tr>
-<tr><td nowrap width=50px>2022-06-12</td><td><a href='https://medium.com/@geetduggal/this-habit-forming-tip-helped-me-actually-make-habits-stick-cdd8b5502e17'>This Habit Forming Tip Helped Me Actually Make Habits Stick</a></td></tr>
-<tr><td nowrap width=50px>2022-06-02</td><td><a href='https://medium.com/@geetduggal/i-spent-50-on-these-obsidian-plugins-750945f4010b'>I Spent $50 On These Obsidian Plugins</a></td></tr>
-<tr><td nowrap width=50px>2022-05-24</td><td><a href='https://medium.com/@geetduggal/the-apple-home-theater-7a0375f894e9'>The Apple Home Theater</a></td></tr>
-<tr><td nowrap width=50px>2022-05-22</td><td><a href='https://medium.com/@geetduggal/how-to-surface-the-most-useful-reading-highlights-in-obsidian-c2d50786c5ee'>How to Surface The Most Useful Reading Highlights in Obsidian</a></td></tr>
-<tr><td nowrap width=50px>2022-05-20</td><td><a href='https://medium.com/@geetduggal/organize-your-notes-projects-and-tasks-by-area-of-responsibility-18035702be22'>Organize Your Notes, Projects and Tasks by Area of Responsibility</a></td></tr>
-<tr><td nowrap width=50px>2022-05-17</td><td><a href='https://medium.com/@geetduggal/the-5-reasons-i-switched-from-notion-to-obsidian-adebf802c1f9'>The 5 Reasons I Switched from Notion to Obsidian</a></td></tr>
-<tr><td nowrap width=50px>2022-05-16</td><td><a href='https://medium.com/@geetduggal/this-is-how-to-have-your-books-and-articles-read-to-you-for-free-ee2bd9540d4c'>This Is How to Have Your Books and Articles Read to You for Free (iOS)</a></td></tr>
-<tr><td nowrap width=50px>2022-05-15</td><td><a href='https://medium.com/@geetduggal/this-simple-journaling-method-could-change-your-life-638b51fac9d8'>This Simple Journaling Method Could Change Your Life</a></td></tr>
-<tr><td nowrap width=50px>2016-12-02</td><td><a href='https://medium.com/@geetduggal/reflections-on-aws-re-invent-2016-e59a847d0463'>Reflections on AWS re:Invent 2016</a></td></tr>
-<tr><td nowrap width=50px>2016-12-01</td><td><a href='https://medium.com/@geetduggal/editor-first-vs-terminal-first-for-development-efea6b02d294'>‘Editor-First’ vs. ‘Terminal-First’ for Development</a></td></tr>
-<tr><td nowrap width=50px>2014-11-11</td><td><a href='https://geetduggal.wordpress.com'>Old Wordpress Blog</a></td></tr>
-</table>
-
-<h2>Academic</h2>
-<table>
-
-<tr>
-<td>Patro, Rob; Duggal, G; Love, MI; Irizarry, RA; Kingsford, C; <a href='https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5600148/'>Salmon: fast and bias-aware quantification of transcript expression using dual-phase inference</a> <i>Nature Methods</i> 14  417 2017  (<a href='lib/salmon.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Sefer, Emre; Duggal, Geet; Kingsford, Carl; <a href='https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4904159/'>Deconvolution of ensemble chromatin interaction data reveals the latent mixing structures in cell subpopulations</a> <i>Journal of Computational Biology</i> 23 6 425-438 2016 Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA (<a href='lib/deconvolution.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Filippova, Darya *; Patro, Rob *; Duggal, Geet *; Kingsford, Carl; <a href='https://link.springer.com/article/10.1186/1748-7188-9-14'>Identification of alternative topological domains in chromatin</a> <i>Algorithms for Molecular Biology</i> 9  1-11 2014 BioMed Central (<a href='lib/domains.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Wang, Hao; Duggal, Geet; Patro, Rob; Girvan, Michelle; Hannenhalli, Sridhar; Kingsford, Carl; <a href='https://dl.acm.org/doi/abs/10.1145/2506583.2506633'>Topological properties of chromosome conformation graphs reflect spatial proximities within chromatin</a> <i>Proceedings of the International Conference on Bioinformatics, Computational Biology and Biomedical Informatics</i>   306-315 2013  (<a href='lib/topo3c.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Duggal, Geet; Wang, Hao; Kingsford, Carl; <a href='https://academic.oup.com/nar/article/42/1/87/2436666'>Higher-order chromatin domains link eQTLs with the expression of far-away genes</a> <i>Nucleic acids research</i> 42 1 87-96 2014 Oxford University Press (<a href='lib/3qtl.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Filippova, Darya; Duggal, Geet; Patro, Rob; Kingsford, Carl; <a href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=1APlUC8AAAAJ&sortby=pubdate&citation_for_view=1APlUC8AAAAJ:eQOLeE2rZwMC'>Chromovis: Feature-rich layouts of chromosome conformation graphs</a> <i>Unpublished manuscript at http://www. cs. cmu. edu/~ dfilippo/projects/chromovis/chromovisGD2013. pdf (last accessed 9/21/2017)</i> 15   2013  (<a href='lib/chromovis.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Duggal, Geet; Patro, Rob; Sefer, Emre; Wang, Hao; Filippova, Darya; Khuller, Samir; Kingsford, Carl; <a href='https://link.springer.com/article/10.1186/1748-7188-8-8'>Resolving spatial inconsistencies in chromosome conformation measurements</a> <i>Algorithms for Molecular Biology</i> 8  1-10 2013 BioMed Central (<a href='lib/consistency3c.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Duggal, Geet; Kingsford, Carl; <a href='https://link.springer.com/article/10.1186/1471-2105-13-241'>Graph rigidity reveals well-constrained regions of chromosome conformation embeddings</a> <i>BMC bioinformatics</i> 13  1-13 2012 BioMed Central (<a href='lib/rigidity3c.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Patro, Robert *; Duggal, Geet *; Sefer, Emre; Wang, Hao; Filippova, Darya; Kingsford, Carl; <a href='https://dl.acm.org/doi/abs/10.1145/2339530.2339541'>The missing models: A data-driven approach for learning how networks grow</a> <i>Proceedings of the 18th ACM SIGKDD international conference on Knowledge discovery and data mining</i>   42-50 2012  (<a href='lib/growcode.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Ku, Wai Lim; Duggal, Geet; Li, Yuan; Girvan, Michelle; Ott, Edward; <a href='https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0031969'>Interpreting patterns of gene expression: signatures of coregulation, the data processing inequality, and triplet motifs</a> <i>PloS one</i> 7 2 e31969 2012 Public Library of Science San Francisco, USA (<a href='lib/networkexpr.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Duggal, Geet *; Navlakha, Saket *; Girvan, Michelle; Kingsford, Carl; <a href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=1APlUC8AAAAJ&citation_for_view=1APlUC8AAAAJ:u5HHmVD_uO8C'>Uncovering many views of biological networks using ensembles of near-optimal partitions</a> <i>Proceedings of the 1st International Workshop on Discovering, Summarizing and Using Multiple Clusterings (KDD MultiClust)</i> 9 9  2010 Washington DC (<a href='lib/biomodularity.pdf'>pdf</a>)</td>
-</tr>
-</table>
-<p>* indicates equal contribution. Profile on
-<a href='https://scholar.google.com/citations?user=1APlUC8AAAAJ&hl=en'>Google Scholar</a>.
-</p>
-
