--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="content">
 
 <h1>Geet Duggal</h1>
-<p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href="https://gist.github.com/geetduggal/e0a92aeb7162cc5c4abbef26233c71e5">settings.json</a> · </a><a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
+<p><a href="https://www.linkedin.com/in/eng-crisis">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href="https://gist.github.com/geetduggal/e0a92aeb7162cc5c4abbef26233c71e5">settings.json</a> · </a><a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
 <table>
 <tr><td nowrap width=50px>2025-05-05</td><td><div id='typing' class='typing-animation'></div></td></tr>
 <tr><td nowrap width=50px>2025-04-25</td><td>💿 Raycast and Warp are two apps I am very happy with today!</td></tr>
