--- a/index.html
+++ b/index.html
@@ -18,41 +18,5 @@
 <h1>Geet Duggal</h1>
 <p><a href="https://www.linkedin.com/in/eng-crisis">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href="https://gist.github.com/geetduggal/e0a92aeb7162cc5c4abbef26233c71e5">settings.json</a> · </a><a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
 <table>
-<tr><td nowrap width=50px>2025-05-05</td><td><div id='typing' class='typing-animation'></div></td></tr>
-<tr><td nowrap width=50px>2025-04-25</td><td>💿 Raycast and Warp are two apps I am very happy with today!</td></tr>
-<tr><td nowrap width=50px>2025-04-15</td><td>💿 <a href='https://github.com/openai/codex'>Codex</a></td></tr>
-<tr><td nowrap width=50px>2025-04-04</td><td>💿 Awesome: https://voxel51.com/blog/how-to-cluster-images/</td></tr>
-<tr><td nowrap width=50px>2025-02-26</td><td>💬 Slack is down.  Geeting is not.</td></tr>
-<tr><td nowrap width=50px>2025-02-23</td><td>🎧 Apple Vision Pro is low-key amazing. <a href='https://www.youtube.com/watch?v=kJhUOwzhC1A&pp=ygUcc25henp5IGxhYnMgYXBwbGUgdmlzaW9uIHBybw%3D%3D'>This year-later review</a> does a particularly good job explaining.</td></tr>
-<tr><td nowrap width=50px>2025-02-17</td><td>'monospacedness' (pronounced mono-space-ed-ness) should be a word. Eighth installment of Tech Habits out!</td></tr>
-</table>
-
-<script>
-  const text = "Ninth installment of Tech Habits posted!";
-  let index = 0;
-
-
-  function type() {
-      if (index < text.length) {
-          document.getElementById('typing').textContent += text.charAt(index);
-          index++;
-          setTimeout(type, 50);
-      } else {
-        setTimeout(() => {
-          document.getElementById('typing').innerHTML = text;
-          document.getElementById('typing').classList.remove('typing-animation');
-          document.getElementById('typing').style.borderRight = 'none';
-
-        }, 500);
-      }
-  }
-
-  type();
-</script>
-
-<p>
-See all Geets with ability to permalink on
-<a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/geets.csv'>Github</a>.
-</p>
-
-<h2>Articles</h2><table>
+<tr><td nowrap width=50px>2025-07-26</td><td><div id='typing' class='typing-animation'></div></td></tr>
+<tr><td nowrap width=50px>2025-07-26</td><td>Twelfth installment of Tech Habits out!</td></tr>
