Link Tools heading to GitHub rendered README

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ See all Geets with ability to permalink on
 <tr><td nowrap width=50px>2016-12-01</td><td><a href='https://medium.com/@geetduggal/editor-first-vs-terminal-first-for-development-efea6b02d294'>‘Editor-First’ vs. ‘Terminal-First’ for Development</a></td></tr>
 <tr><td nowrap width=50px>2014-11-11</td><td><a href='https://geetduggal.wordpress.com'>Old Wordpress Blog</a></td></tr>
 </table>
-<h2><a href='tools-readme.md'>Tools</a></h2><table>
+<h2><a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/tools-readme.md'>Tools</a></h2><table>
 <tr><td><a href='https://github.com/geetduggal/obsidian-kanban'>Kanban Plus</a></td><td>A fork of Obsidian Kanban with cross-file list management and Full Calendar integration for power users who want more from markdown-backed task boards.</td></tr>
 <tr><td><a href='https://github.com/geetduggal/obsidian-full-calendar'>Full Calendar Plus</a></td><td>A fork of Obsidian Full Calendar adding a linear year view and property-based filtering so you can see your projects as time-spans alongside daily events.</td></tr>
 <tr><td>Thousand Words</td><td>An Obsidian plugin for searching and browsing images in your vault with text-based content search. [In Development]</td></tr>
